# learning

./: .gitignore  README.md
code/docling/: 00-main.py  02-chunking.py  03-embedding.py  04-query.py  05-chat.py  README.md  __init__.py  extraction.py  pyproject.toml
keepalived/: Vagrantfile  bootstrap.sh
mysql-haproxy/: Vagrantfile  docker-compose.yml  haproxy.cfg  keepalived_lb1.conf  keepalived_lb2.conf
yamls/: nfs-values.yaml
