[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Muzammil Iftikhar",email = "muzammil.iftikhar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "chromadb (==1.3.0)",
    "openai (==2.6.1)",
    "docling (==2.59.0)",
    "lancedb (>=0.25.2,<0.26.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "docling-core[chunking-openai] (>=2.50.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

